fix(java8): replace String.repeat and Files.readString/writeString usages for JDK 8 compatibility